--- a/css/login.css
+++ b/css/login.css
@@ -11,6 +11,15 @@
   border-radius: 10px;
   overflow: hidden;
 }
+.validation{
+        color: rgb(255, 0, 0);
+        letter-spacing: 0px;
+        font-size: 15px;
+        width: 60%;
+        margin-left: 20px;
+        display: none;
+}
+
 #left-container {
   height: 100%;
   width: auto;
@@ -33,7 +42,7 @@
   font-size: 20px;
   letter-spacing: 2px;
   align-items: center;
-  
+  background-color: rgb(223, 213, 213);
 }
 
 .button{
